Fixed background repeating on mobile

--- a/sass/yofisio/components/header.sass
+++ b/sass/yofisio/components/header.sass
@@ -66,7 +66,9 @@
         border: none
         background: none
 
-.jumbotron h1
-  font-size: 2.5rem 
-  +media-breakpoint-up(sm)
-    font-size: 3.5rem
+.jumbotron 
+  background-repeat: no-repeat
+  h1
+    font-size: 2.5rem 
+    +media-breakpoint-up(sm)
+      font-size: 3.5rem
